<resources>
    <string name="app_name">Ayudec</string>
    <string name="facebook_app_id">1932388146875817</string> <string name="fb_login_protocol_scheme">fb557800921357698</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_ayudec">Ayudec</string>
    <string name="text_login">Login</string>
    <string name="text_usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_direccion">"@udec.cl"</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nueva_ayudantia">Nueva Ayudantía</string>
    <string name="asignatura">Asignatura</string>
    <string name="horario">Horario</string>
    <string name="sala">Sala</string>
    <string name="cupos">Cupos</string>
    <string name="imporrt">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <!-- PARA PROBAR SPINNER DE CREAR AYUDANTIA, DESPUES SE AGREGA EL CONTENIDO DE FORMA DINAMICA -->
    <string-array name="asignaturas">
        <item>Cálculo 3</item>
        <item>Física 2</item>
        <item>Programación I</item>
    </string-array>
</resources>
